# algorithms

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  clang-format.sh  package-lock.json  package.json
lib/cpp-console-table/: CppConsoleTable.hpp
lib/cxxopts/: cxxopts.h
lib/doctest/: doctest.h
mocks/: aeroflot.txt  master.txt  slave.txt  text_4.txt
src/: CMakeLists.txt
src/aeroflot/: CMakeLists.txt  GraphView.cpp  GraphView.h  main.cpp
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  operator.cpp  operator.h  stack.cpp
src/expression-tree/: CMakeLists.txt  Tree.cpp  Tree.h  calculator.cpp  calculator.h  main.cpp  operator.cpp  operator.h  stack.cpp  stack.h
src/list_24/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  operator.cpp  operator.h  stack.cpp  stack.h
src/phonebook/: Adapter.h  BTree.cpp  BTree.h  BTreeNode.cpp  BTreeNode.h  CMakeLists.txt  FileAdapter.cpp  FileAdapter.h  FileReader.cpp  FileReader.h  FileRepository.cpp  FileRepository.h  FillService.h  Initable.h  Insertable.h  MasterFileAdapter.cpp  MasterFileAdapter.h  Reader.h  SlaveFileAdapter.cpp  SlaveFileAdapter.h  Table.cpp  Table.h  main.cpp
src/table-converter/: CMakeLists.txt  EHeader.h  InputTable.cpp  InputTable.h  Table.cpp  Table.h  TableConverter.cpp  TableConverter.h  main.cpp  table-converter.cpp  table-converter.h
src/text_4/: CMakeLists.txt  Converter.cpp  Converter.h  EHeader.h  InputTable.cpp  InputTable.h  Table.cpp  Table.h  TableConverter.h  main.cpp  text_4.cpp  text_4.h
test/: CMakeLists.txt
test/aeroflot/: CMakeLists.txt  aeroflot.spec.cpp
test/calculator/: CMakeLists.txt  calculator.spec.cpp
test/expression-tree/: CMakeLists.txt  expression-tree.spec.cpp
test/list_24/: CMakeLists.txt  list_24.cpp
test/table-converter/: CMakeLists.txt  table-converter.spec.cpp
test/text_4/: CMakeLists.txt  text_4.cpp
test/utils/: utils.cpp  utils.h
